--- a/MaxPowerLevel/Views/Home/Index.cshtml
+++ b/MaxPowerLevel/Views/Home/Index.cshtml
@@ -2,8 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <a class="btn btn-primary btn-lg" asp-action="Login" asp-controller="Account" asp-route-returnUrl="/Account">Login with Bungie</a>
+
+<section class="hero is-large mt-3 mb-3">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Destiny 2 Utilities
+      </h1>
+      <h2 class="subtitle">
+        Maximize the efficiency of your power level grind
+      </h2>
+      <a class="button is-primary is-large" asp-action="Login" asp-controller="Account" asp-route-returnUrl="/Account">Login with Bungie</a>
     </div>
-</div>
+  </div>
+</section>
