--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -48,9 +48,39 @@ body {
 .footer {
   position: absolute;
   bottom: 0;
+  width: 100%;  
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
+img.char-icon {
+  width: 36px;
+  height: 36px;
+  margin-right: 1rem;
+}
+
+.char-details-panel {
+  margin: 5px;
+  max-width: 300px;
+  margin: auto;
+}
+
+/* Override bulma responsive navbar */
+.navbar-item {
+  color: #fff !important;
+}
+
+.navbar-end {
+  justify-content: flex-end !important;
+  margin-left: auto !important;
+  
+  align-items: stretch  !important;;
+  display: flex  !important;;
+}
+
+.navbar > .container {
+  align-items: stretch;
+  display: flex;
+  min-height: 3.25rem;
   width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
 }
