--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -84,3 +84,42 @@ img.char-icon {
   min-height: 3.25rem;
   width: 100%;
 }
+
+.character-box {
+  position: relative;
+  border-bottom: 2px solid #666;
+  height: 72px;
+  max-width: 356px;
+  cursor: pointer;
+  border-bottom: none;
+}
+
+.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: left center;
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+.details {
+  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 4px 6px 4px 8px;
+  position: relative;
+  z-index: 0;
+}
+
+.character-text {  
+  margin-top: 5px;
+  margin-left: 64px;
+  color: white;
+  font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5), 0px 0px 10px rgba(0,0,0,0.5);
+}
