--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="container is-widescreen">
-  <div class="columns is-centered mt-2">
-    <div class="column">
+  <div class="nav-panels">
+    <div class="nav-panel">
       <div class="panel is-primary char-details-panel">
         <p class="panel-heading">Max Power Level</p>
         
@@ -31,7 +31,7 @@
     @if(@Model.SeasonPassInfo != null)
     {
 
-    <div class="column">
+    <div class="nav-panel">
       <div class="panel char-details-panel">
         <p class="panel-heading">Season Pass Info</p>
         
@@ -60,7 +60,7 @@
       </div>
     </div>
     }
-    <div class="column">
+    <div class="nav-panel">
       <div class="panel char-details-panel">
         <p class="panel-heading">Charged with Light Mods</p>
 
