--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -133,6 +133,9 @@ img.char-icon {
 }
 
 .nav-panel {
-  min-width: 150px;
-  margin: 10px;
+  min-width: 350px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
