--- a/MaxPowerLevel/Views/Account/Dashboard.cshtml
+++ b/MaxPowerLevel/Views/Account/Dashboard.cshtml
@@ -9,33 +9,20 @@
     var accountId = firstCharacter.AccountId;
 }
 
-<p>
-  <a asp-route="AccountDetails" asp-route-type="@((int)firstCharacter.Type)" asp-route-id="@Model.First().AccountId">&lt;&lt; Characters</a>
-</p>
-
-<table style="width: 100%">
-    <tr>
-        @foreach (var character in Model)
-        {
-            <td style="width: 33%; text-align:center">
-                <a asp-action="Details" asp-controller="Character" asp-route-type="@((int)type)" asp-route-id="@accountId" asp-route-characterId="@character.Id">
-                    <img src="@character.EmblemPath">
-                </a>
-            </td>
-        }
-    </tr>
-    <tr>
-        @foreach (var character in Model)
-        {
-            <td style="vertical-align: top;">
+<table class="dash-board-table mt-1">
+    <thead>
+        <tr>
+            @foreach (var character in Model)
+            {
+            <th>
                 @await Html.PartialAsync("CharacterSummaryPartial", character)
-            </td>
-        }
-    </tr>
+            </th>
+            }
+        </tr>
+    </thead>
+    
     <tr>
-        <td colspan="3" style="text-align: center">
-            <h1>Recommendations</h1>
-        </td>
+        
     </tr>
     <tr>
         @foreach (var character in Model)
@@ -46,22 +33,12 @@
         }
     </tr>
     <tr>
-        <td colspan="3" style="text-align: center">
-            <h1>Lowest Items</h1>
-        </td>
-    </tr>
-    <tr>
         @foreach (var character in Model)
         {
             <td style="vertical-align: top;">
                 @await Html.PartialAsync("LowestItemsPartial", character.LowestItems)
             </td>
         }
-    </tr>
-    <tr>
-        <td colspan="3" style="text-align: center">
-            <h1>Highest Power Items</h1>
-        </td>
     </tr>
     <tr>
         @foreach (var character in Model)
