--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -6,10 +6,8 @@
 
 <div class="container is-widescreen">
   <div class="nav-panels">
-    <div class="nav-panel">
-      <div class="panel is-primary char-details-panel">
+      <div class="nav-panel panel is-primary char-details-panel">
         <p class="panel-heading">Max Power Level</p>
-        
           @foreach (var character in Model.Characters){            
             <a class="panel-block" asp-action="Details" asp-controller="Character" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id" asp-route-characterId="@character.Id">
               @if(!string.IsNullOrEmpty(character.EmblemPath)){
@@ -25,54 +23,43 @@
                 All Characters
             </a>
           </div>
-      </div>
     </div>
 
     @if(@Model.SeasonPassInfo != null)
     {
-
-    <div class="nav-panel">
-      <div class="panel char-details-panel">
+      <div class="nav-panel panel">
         <p class="panel-heading">Season Pass Info</p>
-        
-            <div class="panel-block">@Model.SeasonPassInfo.SeasonName</div>
-            <div class="panel-block">
-              <span class="mr-1">Ends:</span>
-              
-              <script>
-                var strDate = new String('@Model.SeasonPassInfo.EndDate.ToString("MM/dd/yyyy hh:mm:ss tt") UTC');
-                var localTime = new Date(strDate);
-                if(localTime.toLocaleDateString !== undefined) {
-                  var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-                  document.write(localTime.toLocaleDateString(undefined, options));
-                }
-                else {
-                  document.write(localTime.toLocaleString());
-                }
-              </script>
-            </div>
-            <div class="panel-block">Rank: @Model.SeasonPassInfo.Rank</div>
-            @if(Model.SeasonPassInfo.RanksPerWeek.HasValue)
-            {
-              <div class="panel-block">Ranks per Week for +20 Power: @Model.SeasonPassInfo.RanksPerWeek.Value</div>
-            }
-          
+          <div class="panel-block">@Model.SeasonPassInfo.SeasonName</div>
+          <div class="panel-block">
+            <span class="mr-1">Ends:</span>
+            <script>
+              var strDate = new String('@Model.SeasonPassInfo.EndDate.ToString("MM/dd/yyyy hh:mm:ss tt") UTC');
+              var localTime = new Date(strDate);
+              if(localTime.toLocaleDateString !== undefined) {
+                var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+                document.write(localTime.toLocaleDateString(undefined, options));
+              }
+              else {
+                document.write(localTime.toLocaleString());
+              }
+            </script>
+          </div>
+          <div class="panel-block">Rank: @Model.SeasonPassInfo.Rank</div>
+          @if(Model.SeasonPassInfo.RanksPerWeek.HasValue)
+          {
+            <div class="panel-block">Ranks per Week for +20 Power: @Model.SeasonPassInfo.RanksPerWeek.Value</div>
+          }
       </div>
-    </div>
     }
-    <div class="nav-panel">
-      <div class="panel char-details-panel">
+      <div class="nav-panel panel">
         <p class="panel-heading">Charged with Light Mods</p>
-
-        
-            <a class="panel-block is-active" asp-action="Index" asp-controller="chargedWithLight" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id">          
-              Display all mods that use the Charged with Light mechanic.
-            </a>
-            <div class="panel-block">
-              <a class="button is-link is-outlined is-fullwidth" asp-action="Index" asp-controller="chargedWithLight" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id">
-                Show Mods
-              </a>
-      </div>
-    </div>
-  </div> 
+        <a class="panel-block is-active" asp-action="Index" asp-controller="chargedWithLight" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id">          
+          Display all mods that use the Charged with Light mechanic.
+        </a>
+        <div class="panel-block">
+          <a class="button is-link is-outlined is-fullwidth" asp-action="Index" asp-controller="chargedWithLight" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id">
+            Show Mods
+          </a>
+        </div>
+      </div> 
 </div>
