--- a/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
@@ -1,7 +1,29 @@
 @model CharacterViewModel
 
-<h1>Max Power: <span style="white-space: nowrap;">@(Model.MaxPowerHuman)</span></h1>
-<ul>
-  <li>Base Power: @Model.BasePowerHuman</li>
-  <li>Seasonal Artifact Power: @Model.BonusPower</li>
-</ul>
+@if(!string.IsNullOrEmpty(Model.EmblemBackgroundPath))
+{
+    @if(ViewData.Eval("wide")!=null) {
+        <div class="columns mt-3">
+            
+            <div class="column ml-1 character-box" aria-label="Human Male Titan">
+                <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
+                <div class="character-text has-text-warning"> @Model.ClassName <span class="ml-2">@Model.MaxPowerHuman</span></div>
+            </div>
+            <ul class="column ml-4 mt-1">
+                <li>Base Power: @Model.BasePowerHuman</li>
+                <li>Seasonal Artifact Bonus: @Model.BonusPower</li>
+            </ul>
+        </div>
+    }
+    @if(ViewData.Eval("wide")==null) {
+        <div class="character-box" aria-label="Human Male Titan">
+            <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
+            <div class="character-text has-text-warning"> @Model.ClassName</div>
+        </div>
+        <ul class="ml-1 mt-1">
+            <li>Max Power: @Model.MaxPowerHuman</li>
+            <li>Base Power: @Model.BasePowerHuman</li>
+            <li>Seasonal Artifact Bonus: @Model.BonusPower</li>
+        </ul>
+    }
+}
