--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -19,8 +19,13 @@
     </div>
 
   </div>
+
+  <div class="item-panels">
+
   @if(Model.LowestItems.Any()){
       @await Html.PartialAsync("LowestItemsPartial", Model.LowestItems)
   }
+  
   @await Html.PartialAsync("HighestItemsPartial", Model)
+  </div>
 </div>
