--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -148,3 +148,77 @@ table.dash-board-table td { border-left: 1px solid #dbdbdb; }
 table.dash-board-table td:first-child { border-left: none; }
 table.dash-board-table th { border-left: 1px solid #dbdbdb; }
 table.dash-board-table th:first-child { border-left: none; }
+
+.item-image {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 72px;
+  height: 72px;
+  margin-right: 6px;
+  background-size: cover;
+}
+
+.item-power-level {
+  position: absolute;
+  bottom: 0;
+  width: auto;
+  padding: 0 2px !important;
+  background: rgba(255, 255, 255, 0.9);
+  line-height: 13px;
+  color: rgb(0, 0, 0);
+  font-size: 10px;
+  font-weight: 700;
+  right: 0;
+}
+
+.divider-border {
+  border: 1px solid rgba(0,0,0,.12);
+}
+
+.item-name {
+    word-wrap: break-word;
+}
+
+.item-slot {
+  word-wrap: break-word;
+  font-weight: 500;
+}
+
+.item-box {
+  border-color: rgba(0,0,0,.12);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 4px;
+  
+  padding: 5px;
+  margin: 2px;
+  
+  display: flex;
+  flex-direction: column;
+  max-width: 150px;
+  margin-top: 1rem;
+  margin-right: 1rem;
+}
+
+
+.item-grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.gear-panel {
+  max-width: 600px;
+  margin-right: 1rem;
+}
+
+.item-panels {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
