--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -37,18 +37,24 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+  /* position: relative;
+  min-height: 100%; */
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
+
+.main {
+  flex: 1;
+}
+
 .footer {
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
-  width: 100%;  
+  width: 100%;   */
   padding-top: 1rem !important;
   padding-bottom: 1rem !important;
 }
@@ -186,10 +192,10 @@ table.dash-board-table th:first-child { border-left: none; }
 }
 
 .item-box {
-  border-color: rgba(0,0,0,.12);
+  /* border-color: rgba(0,0,0,.12);
   border-style: solid;
   border-width: 2px;
-  border-radius: 4px;
+  border-radius: 4px; */
   
   padding: 5px;
   margin: 2px;
@@ -212,7 +218,6 @@ table.dash-board-table th:first-child { border-left: none; }
 
 .gear-panel {
   max-width: 600px;
-  margin-right: 1rem;
 }
 
 .item-panels {
@@ -221,4 +226,37 @@ table.dash-board-table th:first-child { border-left: none; }
   justify-content: start;
   align-items: flex-start;
   flex-wrap: wrap;
+}
+
+.char-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+
+}
+
+.char-summary-wide {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.char-summary-narrow {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.artifact-bonus {
+  display: inline-block;
+}
+
+.dashboard-cell {
+  vertical-align: top;
 }
