--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -5,27 +5,30 @@
     ViewData["Title"] = Model.ClassName + " Max Power";
 }
 
-<div class="container is-widescreen">
+<div class="container is-fluid">
   @await Html.PartialAsync("CharacterSummaryPartial", Model, new ViewDataDictionary(ViewData){{"wide", true}})
-  <div class="columns">
+  <div class="char-row my-4">
     @if(Model.Recommendations.Any()){
-      <div class="column">
+      <div class="mr-4 my-2">
         @await Html.PartialAsync("RecommendationsPartial", Model.Recommendations, new ViewDataDictionary(ViewData){{"wide", true}})
       </div>
     }
 
-    <div class="column">
+    <div class="my-2">
       @await Html.PartialAsync("ItemPowerLevelsPartial", Model.Engrams, new ViewDataDictionary(ViewData){{"wide", true}})
     </div>
 
   </div>
 
   <div class="item-panels">
-
-  @if(Model.LowestItems.Any()){
-      @await Html.PartialAsync("LowestItemsPartial", Model.LowestItems)
-  }
-  
-  @await Html.PartialAsync("HighestItemsPartial", Model)
+      
+    @if(Model.LowestItems.Any()){
+      <div class="mr-4 my-2">
+          @await Html.PartialAsync("LowestItemsPartial", Model.LowestItems)
+      </div>
+    }
+    <div class="mt-1 my-2">
+      @await Html.PartialAsync("HighestItemsPartial", Model)
+    </div>
   </div>
 </div>
