--- a/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
@@ -4,28 +4,30 @@
 {
     @if(ViewData.Eval("wide")!=null) {
         @* todo fix this *@
-        <div class="columns mt-3 mb-2">
+        <div class="char-summary-wide mt-3 mb-2">
             
-            <div class="column ml-1 character-box" aria-label="Human Male Titan">
+            <div class="ml-1 character-box" aria-label="Human Male Titan">
                 <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
                 <div class="character-text has-text-warning"> @Model.ClassName <span class="ml-2">@Model.MaxPowerHuman</span></div>
             </div>
             <div class="ml-5 mt-2">
-                <div style="font-size: 1.5rem; font-weight: 600;">Base Power: @Model.BasePowerHuman</div>
-                <p>Seasonal Artifact Bonus: @Model.BonusPower</p>
+                <span style="font-size: 1.5rem; font-weight: 600;">Base Power: @Model.BasePowerHuman</span>
+                <span class="ml-4 artifact-bonus" >Seasonal Artifact Bonus: @Model.BonusPower</span>
             </div>
             
         </div>
     }
     @if(ViewData.Eval("wide")==null) {
-        <div class="character-box" aria-label="Human Male Titan">
-            <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
-            <div class="character-text has-text-warning"> @Model.ClassName</div>
+        <div class="char-summary-narrow">
+            <div class="character-box" aria-label="Human Male Titan">
+                <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
+                <div class="character-text has-text-warning"> @Model.ClassName</div>
+            </div>
+            <ul class="ml-1 mt-1">
+                <li>Max Power: @Model.MaxPowerHuman</li>
+                <li>Base Power: @Model.BasePowerHuman</li>
+                <li>Seasonal Artifact Bonus: @Model.BonusPower</li>
+            </ul>
         </div>
-        <ul class="ml-1 mt-1">
-            <li>Max Power: @Model.MaxPowerHuman</li>
-            <li>Base Power: @Model.BasePowerHuman</li>
-            <li>Seasonal Artifact Bonus: @Model.BonusPower</li>
-        </ul>
     }
 }
