--- a/MaxPowerLevel/Views/ChargedWithLight/Index.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/Index.cshtml
@@ -4,31 +4,26 @@
     ViewData["Title"] = "Charged With Light Mods";
 }
 
-<div class="container">
-    <div class="row">
-        <p>
-            <a asp-route="AccountDetails" asp-route-type="@((int)Model.AccountType)" asp-route-id="@Model.AccountId">&lt;&lt; Back</a>
-        </p>
+<div class="container is-fluid">
+    <div class="my-2">
+        <h1 class="title">Charged with Light Mods</h1>
     </div>
-    <div class="row">
-        <h1>Charged with Light Mods</h1>
-    </div>
-    <div class="row">
+    <div class="my-2">
         <p><em>NOTE: There is currently a bug in the Bungie API where mods from Season of Arrivals won't show as unlocked even if they are. Sorry!</em></p>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Become Charged with Light</h2>
-            <ul>
+    <div class="columns class="my-2">
+        <div class="column">
+            <h2 class="subtitle">Become Charged with Light</h2>
+            <ul class="content">
                 @foreach(var mod in Model.BecomeCharged)
                 {
                     <li>@await Html.PartialAsync("ModPartial", mod)</li>
                 }
             </ul>
         </div>
-        <div class="col-md-6">
-            <h2>While Charged with Light</h2>
-            <ul>
+        <div class="column">
+            <h2 class="subtitle">While Charged with Light</h2>
+            <ul class="content">
                 @foreach(var mod in Model.WhileCharged)
                 {
                     <li>@await Html.PartialAsync("ModPartial", mod)</li>
