Small layout fixes

--- a/MaxPowerLevel/wwwroot/css/site.css
+++ b/MaxPowerLevel/wwwroot/css/site.css
@@ -260,3 +260,7 @@ table.dash-board-table th:first-child { border-left: none; }
 .dashboard-cell {
   vertical-align: top;
 }
+
+.comma:not(:last-child):after {
+  content: ", ";
+}
