--- a/MaxPowerLevel/Views/Shared/RecommendationsPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/RecommendationsPartial.cshtml
@@ -18,7 +18,7 @@
                   @foreach(var activity in recommendation.Activities){
                     <tr><td>
                       @foreach(var subactivity in activity){
-                        <span class="is-size-7 has-text-info">@subactivity</span>
+                        <span class="comma is-size-7 has-text-info">@subactivity</span>
                       }</td>
                     </tr>
                   }
