--- a/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/CharacterSummaryPartial.cshtml
@@ -9,7 +9,7 @@
                 <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
                 <div class="character-text has-text-warning"> @Model.ClassName <span class="ml-2">@Model.MaxPowerHuman</span></div>
             </div>
-            <div class="ml-5 mt-2">
+            <div class="ml-5 mt-2 char-info-text">
                 <span style="font-size: 1.5rem; font-weight: 600;">Base Power: @Model.BasePowerHuman</span>
                 <span class="ml-4 artifact-bonus" >Seasonal Artifact Bonus: @Model.BonusPower</span>
             </div>
@@ -18,11 +18,11 @@
     }
     @if(ViewData.Eval("wide")==null) {
         <div class="char-summary-narrow">
-            <div class="character-box" aria-label="Human Male Titan">
+            <div class="character-box mx-1 my-1" aria-label="Human Male Titan">
                 <div class="background" style="background-image: url('@Model.EmblemBackgroundPath')"></div>
                 <div class="character-text has-text-warning"> @Model.ClassName</div>
             </div>
-            <ul class="ml-1 mt-1">
+            <ul class="mx-1 my-1">
                 <li>Max Power: @Model.MaxPowerHuman</li>
                 <li>Base Power: @Model.BasePowerHuman</li>
                 <li>Seasonal Artifact Bonus: @Model.BonusPower</li>
